[gd_scene load_steps=3 format=3 uid="uid://bjf0xtn0a7mt5"]

[ext_resource type="Script" uid="uid://dqorde7uxjw8u" path="res://addons/Ds_levels/ui/popups/loading_screen_storage_path_set_popup.gd" id="1_13re1"]
[ext_resource type="PackedScene" uid="uid://dvd6im2at4f60" path="res://addons/Ds_levels/ui/file_pickers/file_picker.tscn" id="1_8421b"]

[node name="loading_screen_storage_path_set_dialog" type="VBoxContainer"]
offset_right = 547.0
offset_bottom = 211.0
script = ExtResource("1_13re1")

[node name="file_picker" parent="." instance=ExtResource("1_8421b")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
start_path = "res://addons/Ds_levels/default_data/loading_screen_storage.json"
file_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 82
alignment = 1

[node name="cancel_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="accept_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Acccept"

[connection signal="cancled" from="file_picker" to="." method="_on_file_picker_cancled"]
[connection signal="path_changed" from="file_picker" to="." method="_on_file_picker_path_changed"]
[connection signal="path_selected" from="file_picker" to="." method="_on_file_picker_path_selected"]
[connection signal="pressed" from="HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/accept_button" to="." method="_on_accept_button_pressed"]
